Update styles and functionality for game buttons Game logic completed

--- a/index.html
+++ b/index.html
@@ -11,17 +11,42 @@
         <h1>
             Rock PaPer Scissors Game!
         </h1>
+        <p class="choose-msg">
+            Choose your weapon!
+        </p>
         <section class="user-options">
             <button id="scissors">
-
+                <img src="./assets/scissors.svg" alt="scissors">
             </button>
             <button id="rock">
-            
+                <img src="./assets/rock.svg" alt="rock">
             </button>
 
             <button id="paper">
-
+                <img src="./assets/paper.svg" alt="paper">
             </button>
+        </section>
+        <section class="score">
+            <p id="message">
+            </p>
+            <div id="reset-wrapper">
+
+            </div>
+            <p>Score</p>
+            <div class="scores">
+                <p id="user-score">
+                    User:
+                    <span>
+                        0
+                    </span>
+                </p>
+                <p id="computer-score">
+                    Computer:
+                    <span>
+                        0
+                    </span>
+                </p>
+            </div>
         </section>
     </main>
     <a class="hidden" href="https://www.vectorstock.com/royalty-free-vector/rock-paper-scissors-hand-gesture-vector-25169737">Vector image by VectorStock / vectorstock</a>
