allow/disable option buttons & refacror of checking for game over

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock PaPer Scissors</title>
     <link rel="stylesheet" href="./style.css">
+    
+    <link rel="icon" type="image/x-icon" href="./assets/rock.svg" 
+        width="20px" height="20px"
+    >
 </head>
 <body>
     <main>
